--- a/src/app/tela-salas/tela-permissao-salas/tela-permissao-salas.component.html
+++ b/src/app/tela-salas/tela-permissao-salas/tela-permissao-salas.component.html
@@ -23,12 +23,11 @@
   <span class="tituloH">HEIMDALL</span>
 </mat-toolbar>
 
-<mat-form-field>
-  <mat-label>Filtrar</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. professor" #input>
-</mat-form-field>
-
-<div class="table-container" *ngIf="!isMobile">
+<div class="table-container">
+  <mat-form-field>
+    <mat-label>Filtrar</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. professor" #input>
+  </mat-form-field>
   <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="accept">
       <mat-header-cell *matHeaderCellDef>Aceitar</mat-header-cell>
@@ -43,19 +42,19 @@
       <mat-cell *matCellDef="let sala">{{ sala.number }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="cadeiras">
-      <mat-header-cell *matHeaderCellDef>Qte. de cadeiras</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Cadeiras</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.cadeiras }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="mesas">
-      <mat-header-cell *matHeaderCellDef>Qte. de mesas</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Mesas</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.mesas }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="cadeirasPorMesa">
-      <mat-header-cell *matHeaderCellDef>Qte. de cadeiras por mesas</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Cadeiras por mesa</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.cadeirasPorMesa }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="computadores">
-      <mat-header-cell *matHeaderCellDef>Qte. de computadores</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Computadores</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.computadores }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="lousa">
@@ -63,11 +62,11 @@
       <mat-cell *matCellDef="let sala">{{ sala.capacidade }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="projetor">
-      <mat-header-cell *matHeaderCellDef>Qte de projetores</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Projetores</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.projetor }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="status">
-      <mat-header-cell *matHeaderCellDef>Sala está utilizável?</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Utilizável?</mat-header-cell>
       <mat-cell *matCellDef="let sala">{{ sala.status }}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="remove">
@@ -81,27 +80,4 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
-</div>
-
-<div class="cards-container" *ngIf="isMobile">
-  <div *ngFor="let sala of dataSource.filteredData" class="card">
-    <mat-card>
-      <mat-card-content>
-        <p><strong>Número da Sala:</strong> {{ sala.number }}</p>
-        <p><strong>Qte. de cadeiras:</strong> {{ sala.cadeiras }}</p>
-        <p><strong>Qte. de mesas:</strong> {{ sala.mesas }}</p>
-        <p><strong>Qte. de cadeiras por mesas:</strong> {{ sala.cadeirasPorMesa }}</p>
-        <p><strong>Qte. de computadores:</strong> {{ sala.computadores }}</p>
-        <p><strong>Capacidade da sala:</strong> {{ sala.capacidade }}</p>
-        <p><strong>Qte de projetores:</strong> {{ sala.projetor }}</p>
-        <p><strong>Sala está utilizável?</strong> {{ sala.status }}</p>
-        <button mat-icon-button (click)="acceptRow(sala)">
-          <mat-icon>check_circle</mat-icon>
-        </button>
-        <button mat-icon-button (click)="removeRow(sala)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </mat-card-content>
-    </mat-card>
-  </div>
 </div>
