--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -26,10 +26,12 @@
   margin: auto;
   margin-top: 1cm;
   border: 2px solid rgb(0, 0, 0);
+  overflow-x: auto;
 }
 
 mat-table{
   background-color: #ffd740de;
+  width:100%;
 }
 
 .mat-mdc-form-field {
@@ -40,8 +42,58 @@ mat-table{
 
 .demo-button-container{
   position: absolute;
-  margin-left: 2cm;
+  margin: 1% auto;
+  margin-left: 5%;
 }
+
 .demo-button + .demo-button {
   margin-left: 8px;
+}
+
+@media (max-width: 768px) {
+  .tituloH {
+    font-size: 1.5em; /* Reduzir tamanho da fonte do título */
+  }
+  .mat-header-cell, .mat-cell {
+    padding: 8px; /* Reduzir padding em telas pequenas */
+  }
+
+  .mat-form-field {
+    width: 100%; /* Form field ocupa toda a largura */
+  }
+
+  .demo-button-container {
+    position: relative;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 2%;
+  }
+
+  .demo-button {
+    margin-bottom: 8px;
+    width: 90%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .tituloH {
+    font-size: 1.5em; /* Reduzir tamanho da fonte do título */
+  }
+
+  .mat-header-cell, .mat-cell {
+    font-size: 12px; /* Reduzir tamanho da fonte na tabela */
+  }
+
+  .mat-mdc-header-cell, .mat-mdc-cell {
+    font-size: 12px; /* Reduzir tamanho da fonte na tabela */
+  }
+
+  .mat-column-materia {
+    display: none;
+  }
 }
