fix: registro alunos

--- a/src/app/tela-login-cadastro/tela-login-cadastro.component.html
+++ b/src/app/tela-login-cadastro/tela-login-cadastro.component.html
@@ -28,7 +28,7 @@
               <mat-icon matSuffix>edit</mat-icon>
             </mat-form-field>
             <mat-form-field class="example-full-width">
-                <mat-label>Email Usuário</mat-label>
+              <mat-label>Email Usuário</mat-label>
               <input formControlName="email" type="email" matInput placeholder="Email" value="">
               <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
@@ -42,6 +42,12 @@
               <mat-label>Confirme a Senha</mat-label>
               <input formControlName="confirmPassword" type="password" matInput placeholder="Password">
               <mat-icon matSuffix>vpn_key</mat-icon>
+
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>Matrícula</mat-label>
+              <input formControlName="matricula" type="text" matInput placeholder="Matrícula" value="">
+              <mat-icon matSuffix>edit</mat-icon>
             </mat-form-field>
   
             <mat-form-field class="example-full-width">
