fix: subindo pra teste

--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
@@ -28,41 +28,50 @@
   <mat-card>
     <mat-card-title>Cadastro de Salas</mat-card-title>
     <mat-card-content>
-      <form>
+      <form [formGroup]="resgiterForm" (ngSubmit)="save()">
+        <mat-form-field *ngIf="courses.length > 0">
+          <mat-label>Curso:</mat-label>
+          <mat-select formControlName="course">
+            <mat-option *ngFor="let course of courses" [value]="course._id">
+              {{ course.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+
         <mat-form-field>
             <mat-label>Numero da Salas</mat-label>
-          <input matInput type="number" placeholder="Numero da Salas" [(ngModel)]="numeroSalas" name="numeroSalas">
+          <input formControlName="number" matInput type="number" placeholder="Numero da Salas" name="numeroSalas">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Qte. de Cadeiras</mat-label>
-          <input matInput type="number" placeholder="Qte. de Cadeiras" [(ngModel)]="numeroCadeiras" name="numeroCadeiras">
+          <input formControlName="chairs" matInput type="number" placeholder="Qte. de Cadeiras" name="numeroCadeiras">
         </mat-form-field>
         <br>
         <mat-form-field>
             <mat-label>Qte. de Mesas</mat-label>
-          <input matInput type="number" placeholder="Qte. de Mesas" [(ngModel)]="numeroMesas" name="numeroMesas">
+          <input formControlName="tables" matInput type="number" placeholder="Qte. de Mesas" name="numeroMesas">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Qte. de Cadeiras por Mesa</mat-label>
-          <input matInput type="number" placeholder="Qte. de Cadeiras por Mesa" [(ngModel)]="cadeirasPorMesa" name="cadeirasPorMesa">
+          <input formControlName="chairByTables" matInput type="number" placeholder="Qte. de Cadeiras por Mesa" name="cadeirasPorMesa">
         </mat-form-field>
         <br>
         <mat-form-field>
             <mat-label>Qte. de Computadores</mat-label>
-          <input matInput type="number" placeholder="Qte. de Computadores" [(ngModel)]="numeroComputadores" name="numeroComputadores">
+          <input formControlName="computers" matInput type="number" placeholder="Qte. de Computadores" name="numeroComputadores">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Capacidade da sala</mat-label>
-          <input matInput type="number" placeholder="Capacidade da sala" [(ngModel)]="capacidade" name="Capacidade">
+          <input formControlName="capacity" matInput type="number" placeholder="Capacidade da sala" name="Capacidade">
         </mat-form-field>
         <br>
         <mat-form-field>
             <mat-label>Qte. de Projetores</mat-label>
-          <input matInput type="number" placeholder="Qte. de Projetores" [(ngModel)]="projetor" name="projetor">
+          <input formControlName="projectors" matInput type="number" placeholder="Qte. de Projetores" name="projetor">
         </mat-form-field>
+        <button type="submit" class="saveButton">Cadastrar</button>
       </form>
     </mat-card-content>
 
     
-    <button (click)="save()" class="saveButton">Cadastrar</button>
   </mat-card>
