--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -68,7 +68,7 @@
           </ng-container>
   
       <ng-container matColumnDef="remove">
-        <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>Remover</mat-header-cell>
         <mat-cell *matCellDef="let sala">
           <button mat-icon-button (click)="removeRow(sala)">
             <mat-icon>delete</mat-icon>
