--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
@@ -28,13 +28,13 @@
 <div class="table-container">
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. profess" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. professor" #input>
     </mat-form-field>
   
     <mat-table [dataSource]="dataSource">
       
         <ng-container matColumnDef="accept">
-            <mat-header-cell *matHeaderCellDef>Accept</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef>Aceitar</mat-header-cell>
             <mat-cell *matCellDef="let sala">
               <button mat-icon-button (click)="acceptRow(sala)">
                 <mat-icon>check_circle</mat-icon>
@@ -64,7 +64,7 @@
       </ng-container>
 
       <ng-container matColumnDef="remove">
-        <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>Remover</mat-header-cell>
         <mat-cell *matCellDef="let sala">
           <button mat-icon-button (click)="removeRow(sala)">
             <mat-icon>delete</mat-icon>
