--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
@@ -21,4 +21,10 @@
   <div *ngIf="userReservas.length === 0">
     <p>Nenhuma reserva encontrada.</p>
   </div>
+
+  <tr *ngFor="let reserva of userReservas">
+    <td>{{ formatDate(reserva.start_time) }}</td>
+    <td>{{ formatDate(reserva.end_time) }}</td>
+    <td>{{ reserva.class_id }}</td>
+  </tr>
   
