--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -27,82 +27,93 @@
 
   <div class="table-container">
     <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. professor" #input>
+      <mat-label>Filtro por palavras chaves</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex: SP000000" #input>
     </mat-form-field>
-  
-    <mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef>
-          Selecionar Editar
-        </th>
-        <td class="select" mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()"
-          [checked]="selection.isSelected(row)"
-          [disabled]="selection.selected.length > 0 ? !selection.isSelected(row) : false"
-          ></mat-checkbox>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="remove">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
-        [checked]="selectionReject.hasValue() && isAllRejectSelected()"
-        [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
-        ></mat-checkbox>
-        Selecionar deletar
-      </th>
-      <td class="select" mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-        (change)="$event ? selectionReject.toggle(row) : null"
-        [checked]="selectionReject.isSelected(row)"
-        ></mat-checkbox>
-      </td>
-      </ng-container>
-      
-          <ng-container matColumnDef="numero">
-            <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.number }}</mat-cell>
+    <div class="mat-elevation-z4">
+      <table mat-table [dataSource]="dataSource" matSort>
+        
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="remove">
+          <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
+                [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+                [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
+                >
+              </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+              <mat-checkbox (click)="$event.stopPropagation()"
+              (change)="$event ? selectionReject.toggle(row) : null"
+              [checked]="selectionReject.isSelected(row)"
+              ></mat-checkbox>
+            </td>
           </ng-container>
-  
-          <ng-container matColumnDef="cadeiras">
-            <mat-header-cell *matHeaderCellDef>Cadeiras</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.chairs }}</mat-cell>
+          <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Selecionar Editar</th>
+            <td class="select" mat-cell *matCellDef="let row">
+              <mat-checkbox (click)="$event.stopPropagation()"
+                (change)="$event ? selection.toggle(row) : null"
+                [checked]="selection.isSelected(row)"
+                [disabled]="selection.selected.length > 0 ? !selection.isSelected(row) : false"
+                ></mat-checkbox>
+            </td>
           </ng-container>
-          <ng-container matColumnDef="mesas">
-            <mat-header-cell *matHeaderCellDef>Mesas</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.tables }}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="cadeirasPorMesa">
-            <mat-header-cell *matHeaderCellDef>Cadeiras por mesas</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.chairByTables }}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="computadores">
-            <mat-header-cell *matHeaderCellDef>Computadores</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.computers }}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="lousa">
-            <mat-header-cell *matHeaderCellDef>Capacidade da sala</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.capacity }}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="projetor">
-            <mat-header-cell *matHeaderCellDef>Projetores</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.projectors }}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="status">
-            <mat-header-cell *matHeaderCellDef>Utilizavel?</mat-header-cell>
-            <mat-cell *matCellDef="let sala">{{ sala.status }}</mat-cell>
-          </ng-container>
+    
+        <ng-container matColumnDef="numero">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Número da Sala</th>
+          <td mat-cell *matCellDef="let row"> {{ row.number }} </td>
+        </ng-container>
+        <ng-container matColumnDef="cadeiras">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeiras</th>
+          <td mat-cell *matCellDef="let row"> {{ row.chairs }} </td>
+        </ng-container>
+        <ng-container matColumnDef="mesas">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Mesas</th>
+          <td mat-cell *matCellDef="let row"> {{ row.tables }} </td>
+        </ng-container>
+        <ng-container matColumnDef="cadeirasPorMesa">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeiras por mesas</th>
+          <td mat-cell *matCellDef="let row"> {{ row.chairByTables }} </td>
+        </ng-container>
+        <ng-container matColumnDef="computadores">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Computadores</th>
+          <td mat-cell *matCellDef="let row"> {{ row.computers }} </td>
+        </ng-container>
+        <ng-container matColumnDef="lousa">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Capacidade da sala</th>
+          <td mat-cell *matCellDef="let row"> {{ row.capacity }} </td>
+        </ng-container>
+        <ng-container matColumnDef="projetor">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Projetores</th>
+          <td mat-cell *matCellDef="let row"> {{ row.projectors }} </td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Utilizavel?</th>
+          <td mat-cell *matCellDef="let row"> {{ row.status }} </td>
+        </ng-container>
+          
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">Não foram encontrados dados para: "{{input.value}}"</td>
+        </tr>
+      </table>
+    
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div> 
+  </div>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
-    </div>
-    <div class="demo-button-container">
-      <button mat-raised-button [disabled]="!salas.length" (click)="addData()" class="demo-button">
+  
+
+   <div class="demo-button-container">
+      <button mat-raised-button [disabled]="selection.selected.length == 0" (click)="editSala()" class="demo-button">
         EDITAR SALA
       </button>
-      <button mat-raised-button [disabled]="!salas.length" (click)="removeData()" class="demo-button">
+      <button mat-raised-button [disabled]="selectionReject.selected.length < 1" (click)="apagarSalas()" class="demo-button">
         EXCLUIR SALA
       </button>
   </div>
