--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
@@ -77,7 +77,7 @@
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      <td class="mat-cell" colspan="4">Não foram encontrados dados para: "{{input.value}}"</td>
     </tr>
   </table>
 
